<resources>
    <string name="app_name">DoAnTotNghiep</string>
    <string name="save">Lưu</string>
    <string name="write_new_cmt">Viết bình luận</string>
    <string name="private_info">Thông tin cá nhân</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="sdt">Số điện thoại</string>
    <string name="username">Tên đăng nhập</string>
    <string name="prompt_password">Password</string>
    <string name="full_name">Họ và tên</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="rePassword">Nhập lại mật khẩu</string>
    <string name="address">Địa chỉ</string>
    <string name="error">Lỗi</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="password">"Mật khẩu"</string>
    <string name="change_password">"Đổi mật khẩu"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="HaNoi">"Hà Nội"</string>
    <string name="View_Near">"Xem gần đây</string>
    <string name="near_you">"Gần tôi</string>
    <string name="delivery">Giao hàng</string>
    <string name="notes">Ghi chú</string>
    <string name="reservation">Đặt chỗ</string>
    <string name="payment">Thanh toán</string>
    <string name="avatar">Ảnh đại diện</string>
    <string name="history">Lịch sử</string>
    <string name="bill">Hóa đơn</string>
    <string name="setting_app">Cài đặt ứng dụng</string>
    <string name="lout_out">Đăng xuất</string>
    <string name="setting_account">Thiết lập tài khoản </string>
    <string name="info_contact">Thông tin liên hệ</string>
    <string name="confirm">Xác nhận</string>
    <string name="list_bill">Danh sách hóa đơn</string>
    <string name="list_bill_ordered">Danh sách hóa đơn đã đặt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">"Chỉnh sửa"</string>
    <string name="accept">Xác nhận</string>
    <string name="reject">Từ chối</string>
    <string name="yetAccepted">Chưa xác nhận</string>
    <string name="accepted">Được xác nhận</string>
    <string name="rejected">Bị từ chối</string>
    <string name="total_money">Tổng số tiền:</string>
    <string name="time_create_bill">Thời gian tạo đơn hàng:</string>
    <string name="name_user_order">Tên người đặt hàng:</string>
    <string name="name_restaurant">Tên nhà hàng:</string>
    <string name="time_delivery_come">Thời gian giao đến:</string>
    <string name="status_bill">Trạng thái đơn hàng:</string>
    <string name="bill_type">Loại đơn hàng:</string>
    <string name="address_delivery">Địa chỉ giao hàng:</string>
    <string name="payment_method">Phương thức thanh toán:</string>
    <string name="back">Trở lại</string>
    <string name="accept_yet">Chưa xác nhận</string>
    <string name="bill_delivery">Đơn giao hàng</string>
    <string name="bill_reservation">Đơn đặt chỗ</string>
    <string name="change">"Thay đổi"</string>
    <string name="change_status_confirm">"Thay đổi trạng thái đơn hàng"</string>
    <string name="change_bill_reservation">"Thay đổi hóa đơn đặt chỗ"</string>
    <string name="save_bill">Lưu hóa đơn</string>
    <string name="ok">ok</string>

    <!--  API Key  -->
    <string name="map_api_key">AIzaSyAVoMkxOfbKNH0Cufu-ZnTFi1w4diUKmRY</string>
</resources>