<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorGrayeee"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.delivery_ordered.DetailBillDeliveryOrderedActivity">


    <LinearLayout
        android:id="@+id/viewBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange001"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp">

        <ImageView
            android:id="@+id/icPageBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_ios_24" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_weight="1"
            android:text="Chi tiết hóa đơn" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:padding="10dp"
        android:layout_below="@id/viewBack"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:textStyle="bold"
                android:textColor="@color/colorGray222"
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thông tin hóa đơn" />


            <LinearLayout
                android:orientation="vertical"
                android:stretchColumns="1"
                android:background="@color/white"
                android:padding="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:text="@string/name_restaurant"
                        android:textColor="@color/colorGray222"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textColor="@color/colorGray444"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:id="@+id/txtNameRestaurant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nhà hàng Cua càng đỏ" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:textColor="@color/colorGray222"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_create_bill" />

                    <TextView
                        android:textColor="@color/colorGray444"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:id="@+id/txtTimeCreateBill"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="22/4/2021 12:22:28" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:textColor="@color/colorGray222"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status_bill" />

                    <TextView
                        android:textColor="@color/colorGray444"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:id="@+id/txtStatusConfirm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/accepted" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:textColor="@color/colorGray222"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bill_type" />

                    <TextView
                        android:textColor="@color/colorGray444"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:id="@+id/txtBillType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delivery" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:textColor="@color/colorGray222"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address_delivery" />

                    <TextView
                        android:maxLines="10"
                        android:textColor="@color/colorGray444"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:id="@+id/txtAddressDelivery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Số 1, Phan Đình Phùng, Trung Kính, Yên Hòa, Hà Nội" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:textColor="@color/colorGray222"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_delivery_come" />

                    <TextView
                        android:textColor="@color/colorGray444"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:id="@+id/txtTimeDelivery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="25/04/2021 15:33:25" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:textColor="@color/colorGray222"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_money" />

                    <TextView
                        android:textColor="@color/colorGray444"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:id="@+id/txtTotalMoney"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1,555,555đ" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:textColor="@color/colorGray222"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/payment_method" />

                    <TextView
                        android:textColor="@color/colorGray444"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:id="@+id/txtPayment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ví airplay" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:textColor="@color/colorGray222"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notes" />

                    <TextView
                        android:textColor="@color/colorGray444"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:id="@+id/txtNotes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Thêm nước nắm, tương ới, không ăn ruốc" />
                </TableRow>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:textColor="@color/colorGray222"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Tên món ăn" />

                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text="Số lượng" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFoodAndNumber"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp">


                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textAllCaps="false" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</RelativeLayout>