<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity"

    android:background="@color/orange001">

    <ImageView
        android:id="@+id/imgTitle"
        android:layout_centerHorizontal="true"
        android:layout_width="113dp"
        android:layout_height="103dp"
        android:src="@drawable/restaurant1" />

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/formLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <EditText
        android:textColor="@color/black"
        android:layout_below="@id/imgTitle"
        android:background="@drawable/edt_sign"
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="24dp"
        android:padding="@dimen/_8sdp"
        android:hint="@string/username"
        android:selectAllOnFocus="true"/>

    <EditText
        android:textColor="@color/black"
        android:layout_below="@id/edtUsername"
        android:id="@+id/edtpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:padding="@dimen/_8sdp"
        android:background="@drawable/edt_sign"
        android:hint="@string/matkhau"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />

    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rowBtn"
        android:layout_below="@id/formLogin"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:textColor="#000">

        <Button
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:id="@+id/btnlogin"
            android:background="@drawable/btn_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_login"/>

        <Button
            android:layout_weight="1"
            android:textColor="@color/white"
            android:layout_marginLeft="15dp"
            android:textAllCaps="false"
            android:id="@+id/btnRegister"
            android:background="@drawable/btn_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_register"/>

    </TableRow>


    <ProgressBar
        android:id="@+id/loading"
        android:layout_below="@id/rowBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"/>

<!--    <TextView-->
<!--        android:id="@+id/checkInput"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="12dp"-->
<!--        android:textColor="@color/colorAccent"-->
<!--        android:text="Mật khẩu lớn hơn 8 ký tự"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/login"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.886"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/password"-->
<!--        app:layout_constraintVertical_bias="0.0" />-->
</RelativeLayout>