<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:stretchColumns="*"
            android:padding="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow>
                <LinearLayout
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                    <ImageView
                        android:padding="@dimen/_10sdp"
                        android:background="@color/foody_delivery"
                        android:src="@drawable/giaohang"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_70sdp"/>

                    <TextView
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="@string/delivery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
                <LinearLayout
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:padding="@dimen/_10sdp"
                        android:background="@color/foody_delivery"
                        android:src="@drawable/ic_reservation"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_70sdp"/>

                    <TextView
                        android:textColor="@color/colorGray333"
                        android:textStyle="bold"
                        android:text="@string/reservation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
            </TableRow>


        </TableLayout>

        <TextView
            android:background="@color/colorGrayddd"
            android:layout_width="match_parent"
            android:layout_height="7dp"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TableRow
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:layout_marginEnd="@dimen/_20sdp"
                android:gravity="end"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/View_Near"/>

            <TextView
                android:layout_marginStart="@dimen/_20sdp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/near_you"/>

        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_restaurant"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</FrameLayout>